# benchmarks

./: .gitignore  MODULE.bazel  conanfile.txt  variables.bzl
coro-fibs/: BUILD.bazel  rules.bzl
