load("//:variables.bzl", "CSVS")

TNAME = "coro-fibs"

cc_binary(
  name = TNAME,
  srcs = ["corofibs.cc", "sumfib_module.cc"],
  includes = ["."],
  copts = ["-std=c++20"],
  deps = ["@cppbenchmark//:cppbenchmark"]
)

genrule(
  name = "TEST_{}".format(TNAME),
  outs = ["{}.csv".format(TNAME)],
  cmd = "$(execpath {}) -q -o csv > $(rootpath)$(BINDIR)/{}/{}.csv".format(TNAME, CSVS, TNAME)
)

